k8s/traefik/traefik-public/traefik-public-gateway.yaml
# Public Gateway - accessible from internet
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-public-gateway
  namespace: traefik
  labels:
    gateway-type: public
  annotations:
    external-dns.alpha.kubernetes.io/target: dc1.oliverilp.ee
spec:
  addresses:
    - type: IPAddress
      value: 10.1.20.50
  gatewayClassName: traefik-public
  listeners:
    - name: http
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 8443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: crunchyroll-certificate-secret
            namespace: cert-manager
          - name: oliverilp-certificate-secret
            namespace: cert-manager
